--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "standard": "^10.0.3"
   },
   "engines": {
-    "node": ">= 7.7.0",
-    "npm": ">= 4.0.0"
+    "node": "8.1.4",
+    "npm": "5.5.1"
   },
   "standard": {
     "env": [
