--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest && standard"
   },
   "dependencies": {
-    "pr-review-submit-unassign": "git+https://github.com/jiminycricket/pr-review-submit-unassign.git",
+    "pr-review-submit-unassign": "git+https://github.com/jiminycricket/pr-review-submit-unassign.git#v1.0.0",
     "probot": "^3.0.0"
   },
   "devDependencies": {
