--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "pr-review-submit-unassign": "git+https://github.com/jiminycricket/pr-review-submit-unassign.git#v1.2.0",
     "assign-in-comment": "git+https://github.com/henry40408/assign-in-comment.git#v2.0.0",
+    "semantic-release-app": "git+https://github.com/amowu/semantic-release-app.git#0.1.0",
     "probot": "^3.0.0"
   },
   "devDependencies": {
@@ -31,7 +32,8 @@
   "probot": {
     "plugins": [
       "pr-review-submit-unassign",
-      "assign-in-comment"
+      "assign-in-comment",
+      "semantic-release-app"
     ]
   }
 }
